# Htn_proj2

./: README.md
MCP_Chat_Logger/: .gitignore  LICENSE  README.md  chat_logger.py  pyproject.toml  simple_chat_logger.py  smithery.yaml
demo/: README.md  app.py  package.json
demo/static/css/: styles.css
demo/static/js/: app.js  config.js
demo/static/js/modules/: dataManager.js  resizablePanels.js  uiComponents.js  uiUtils.js
demo/templates/: index.html
